# CSCE-313

./: .gitignore  README.md
mp1/: CMakeLists.txt  essay.odt  makefile  memtest.c  my_allocator.h  utils.c
mp1-clion/: CMakeLists.txt  free_list.c  free_list.h  makefile  memtest  memtest.c  my_allocator.c  utils.h
mp2/: CMakeLists.txt  client  client.cpp  dataserver  dataserver.C  makefile  mutex.H  mutex_guard.H  reqchannel.H  semaphore.H  semaphore.cpp  simpleclient  simpleclient.C
mp3/: BoundedBuffer.cc  BoundedBuffer.h  BoundedBufferUnitTests.cc  CMakeLists.txt  client.cc  makefile  mp3_martinsen_joseph_report.odt  mutex_guard.H  mutex_guard.cc  reqchannel.H  reqchannel.cc  simpleclient.cc
mp3/Submission/: BoundedBuffer.h  client.cc  dataserver.cc  mutex.cc  reqchannel.cc
mp4/: CMakeLists.txt  Submission.tar.xz  client.cc  data.ods  mp3_martinsen_joseph_report.odt  reqchannel.H  semaphore.cc
mp4/Submission/: client_323009961.cc  makefile  reqchannel.cc  semaphore.H
mp5/: .clang-format  BoundedBuffer.h  BoundedBufferUnitTests.cc  client.cc  client_323009961.cc  dataserver.cc  dataserver_323009961.cc  makefile  mp3_martinsen_joseph_report.odt  mp5.json  mutex.H  netreqchannel.H  netreqchannel.cc  reqchannel.H  reqchannel.cc  semaphore.H
mp5/JOSEPH_MARTINSEN_MP5/: client.cc  makefile  mutex.cc  netreqchannel.H  netreqchannel.cc
